migrate project architeture to Maven build system